# template-python-poetry

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  lint.yaml  meta-lint.yaml  publish.yaml  release.yaml
tests/: test_stub.py
