[tool.poetry]
name = "" # TODO: set name and change {package_name} below
version = "0.0.0"
description = ""
license = "MIT"
authors = ["bakdata"]
readme = "README.md" # Could also do ["path/to/README0.md", "path/to/README1.md"]

# TODO
# repository = ""
# documentation = ""
# keywords = []
# classifiers = []

# [tool.poetry.scripts]
# start = "main:start"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.3.4"
pyright = "^1.1.355"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
pytest-clarity = "^1.0.1"
pytest-cov = "^5.0.0"

[tool.ruff]
output-format = "grouped"
show-fixes = true
target-version = "py310"

[tool.ruff.lint]
ignore = [
  # Rules in conflict with `ruff-format` -- START
  "W191", # Checks for indentation that uses tabs. Spaces are preferred.
  # "E111", # Checks for indentation with a non-multiple of 4 spaces, add when out of nursery
  # "E114", # Checks for indentation of comments with a non-multiple of 4 spaces, add when out of nursery
  # "E117", # Checks for over-indented code, add when out of nursery
  "E501", # Line too long
  # Rules in conflict with `ruff-format` -- END
  "RUF012", # type class attrs with `ClassVar` -- Too strict/trigger-happy
]

# For a list of all possible rules visit https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
  "F", # Pyflakes
  "E", # pycodestyle Errors
  "W", # pycodestyle Warnings
  "C90", # mccabe
  "I", # isort
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "RUF", # Ruff-specific rules
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov={package_name} --cov-report term-missing"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
